# ChangeLog for sci-mathematics/minisat
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/minisat/ChangeLog,v 1.3 2011/04/10 08:03:44 nerdboy Exp $

  09 Apr 2011; Steve Arnold <nerdboy@gentoo.org> minisat-2.2.0-r1.ebuild:
  Updated include files to proper directory structure (which other 
  packages seem to assume).

*minisat-2.2.0-r1 (09 Apr 2011)

  09 Apr 2011; Steve Arnold <nerdboy@gentoo.org> -minisat-2.2.0.ebuild,
  +minisat-2.2.0-r1.ebuild:
  Updated to include MTL header files apps that need them.

*minisat-2.2.0 (09 Apr 2011)

  09 Apr 2011; Steve Arnold <nerdboy@gentoo.org> +minisat-2.2.0.ebuild,
  +metadata.xml:
  New ebuild for minisat, a small fast SAT solver (a tool for solving 
  the Boolean Satisfiability Problem used in model checking).
