@@ -8,6 +8,5 @@
 <use>
 <flag name="extended-solver">Build extended version of SAT solver with
  additional features.</flag>
-<flag name="prof">Build with profiling enabled.</flag>
 </use>
 </pkgmetadata>
