@@ -1,6 +1,14 @@
 # ChangeLog for sci-mathematics/minisat
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/minisat/ChangeLog,v 1.3 2011/04/10 08:03:44 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/minisat/ChangeLog,v 1.4 2011/04/10 08:40:48 xarthisius Exp $
+
+*minisat-2.2.0-r2 (10 Apr 2011)
+
+  10 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> -minisat-2.2.0-r1.ebuild,
+  +minisat-2.2.0-r2.ebuild, metadata.xml:
+  Remove IUSE='prof' since it only adds -pg to flags, simplify 'if' logic, fix
+  quotes, respect LDFLAGS, add missing dies, move variables definitions to
+  pkg_setup, use emake instead of gmake, use dodoc for pdf file. Drop old.
 
   09 Apr 2011; Steve Arnold <nerdboy@gentoo.org> minisat-2.2.0-r1.ebuild:
   Updated include files to proper directory structure (which other 
